# admin-assistant

./: .gitignore  AdminAssistant.spec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md  release_checklist.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml  release-installer.yml  release-winget-manifests.yml
alembic/: env.py  script.py.mako
docs/: architecture.md  configuration.md  installation.md  usage.md
docs/screenshots/: README.md
installer/: AdminAssistant.iss
scripts/: build_installer.ps1  generate_winget_manifests.ps1
src/admin_assistant/: __init__.py  main.py  version.py
src/admin_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/admin_assistant/app/: __init__.py  bootstrap.py  container.py  event_bus.py  events.py  qt_bridge.py  task_runner.py
src/admin_assistant/core/: __init__.py  enums.py  errors.py  logging.py  redaction.py  result.py
tests/: conftest.py
tests/integration/: test_bootstrap.py  test_execution_persistence_integration.py  test_history_queries_integration.py  test_script_repository_integration.py  test_server_repository_integration.py
tests/unit/: test_ai_service.py  test_console_panel.py  test_execution_service.py  test_history_service.py  test_httpx_provider.py  test_incident_runbooks.py  test_incident_service.py  test_paramiko_gateway.py  test_platform_paths.py  test_script_service.py  test_server_service.py  test_settings_service.py  test_smoke.py  test_system_info_dialog.py
(+79 files in other folders)
