[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admin-assistant"
version = "0.1.0"
description = "Desktop SSH script manager and AI troubleshooting assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.8",
  "paramiko>=3.4",
  "keyring>=25.5",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
build = [
  "pyinstaller>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
